# clawbound

./: .gitignore  README.md  pyproject.toml
docs/: clawbound-benchmark-pack.md  clawbound-design-principles.md  clawbound-known-good-runbook.md  clawbound-publish-gate.md  clawbound-research-preview.md
docs/release-verification/: clawbound-release-verification-2026-03-19.md
docs/release-verification/evidence-2026-03-19-run2/: clawbound-native-live-sanity-report.json  clawbound-native-multifile-live-report.json  clawbound-native-multiturn-live-report.json  (+2 more)
docs/releases/: clawbound-research-preview.md
src/clawbound/: __init__.py  cli.py  engine.py  native-diff-review-live.live.test.ts  native-live-sanity.live.test.ts  native-multifile-live.live.test.ts  native-multiturn-live.live.test.ts  native-review-live.live.test.ts  native-smoke.test.ts  native-subagent-live.live.test.ts  orchestrator.py  runtime.test.ts  runtime.ts  shadow.test.ts  shadow.ts
src/clawbound/benchmarks/: pack.ts  (+3 more)
tests/: conftest.py
tests/cli/: test_cli.py
tests/contracts/: test_types.py
tests/engine/: test_engine.py
tests/execution_loop/: test_action_gate.py  test_loop.py
tests/orchestrator/: test_orchestrator.py
tests/policy_engine/: test_engine.py
tests/prompt_builder/: test_builder.py
tests/provider_adapter/: test_anthropic.py  test_openai_compat.py  test_resolver.py
tests/session_store/: test_store.py
tests/shared/: test_text_utils.py  test_tokens.py
tests/signal_processor/: test_processor.py
tests/task_compiler/: test_compiler.py
tests/tool_broker/: test_broker.py
(+38 files in other folders)
