[project]
name = "clawbound"
version = "0.1.0"
description = "Bounded sparse-context execution engine"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["pydantic>=2.0,<3.0"]

[project.optional-dependencies]
providers = ["httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13", "httpx>=0.27"]

[project.scripts]
clawbound = "clawbound.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawbound"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
